fix for production bg image not showing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,12 +2,11 @@
 .welcome{
   
   min-height: 300px;
-  background-image: url(desktop.jpg) ; 
+  background-image: url(/assets/desktop.jpg) ; 
 
 }
 
 .intro-header {
-  padding-top: 60px;
   // padding-bottom: 50px;
   text-align: center;
   // color: #f8f8f8;
